kubernetes/apps/devtron/namespace-ci.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devtron-ci
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
