kubernetes/apps/devtron/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: devtron
  namespace: devtroncd
spec:
  entryPoints:
    - websecure-external
  routes:
    - match: Host(`cloud.dvflw.co`)
      kind: Rule
      middlewares:
        - name: public-chain
          namespace: infrastructure
      services:
        - name: devtron-service
          port: 80
  tls:
    secretName: devtron-tls
